[Dis] Make gnu-as common to disassembler

--- a/README_.adoc
+++ b/README_.adoc
@@ -143,8 +143,8 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   --c-style        : C language style number constant (bool)
   --intel-hex      : Intel style hexadecimal (bool)
   --origin-char    : letter for origin symbol (char)
+  --gnu-as         : GNU assembler compatible (bool)
   --external-paren : disp2(disp(ext)) as external addressing (bool: 32032)
-  --gnu-as         : GNU assembler compatible (bool: 68000, Z8001, 32032)
   --indirect-long  : [] for indirect long operand (bool: 6502)
   --longa          : enable 16-bit accumulator (bool: 6502)
   --longi          : enable 16-bit index registers (bool: 6502)
