--- a/README_.adoc
+++ b/README_.adoc
@@ -98,8 +98,10 @@ usage: asm [-o <output>] [-l <list>] <input>
   --<name>=<vale>   : extra options (<type> [, <CPU>])
   --list-radix      : set listing radix (8, 16) (int)
   --smart-branch    : optimize branch instruction (bool)
+  --extmode         : Extended mode (bool: Z380)
   --fpu             : floating point co-processor (text: 8086, 68000, 32032)
   --implicit-word   : unknown instruction defines word (bool: 6100, J11)
+  --lwordmode       : Long word mode (bool: Z380)
   --optimize-index  : optimize zero index (bool: Z8)
   --optimize-segment: optimize segment override (bool: 8086)
   --pc-bits         : program counter width in bit, default 13 (int: 6805)
@@ -145,10 +147,12 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
   --origin-char    : letter for origin symbol (char)
   --gnu-as         : GNU assembler compatible (bool)
   --external-paren : disp2(disp(ext)) as external addressing (bool: 32032)
+  --extmode        : Extended mode (bool: Z380)
   --fpu            : floating point co-processor (text: 8086, 68000, 32032)
   --indirect-long  : [] for indirect long operand (bool: 6502)
   --longa          : enable 16-bit accumulator (bool: 6502)
   --longi          : enable 16-bit index registers (bool: 6502)
+  --lwordmode      : Long word mode (bool: Z380)
   --pc-bits        : program counter width in bit (default 13) (int: 6805)
   --pmmu           : memory management unit (text: 32032)
   --segment-insn   : segment override as instruction (bool: 8086)
