--- a/README_.adoc
+++ b/README_.adoc
@@ -85,9 +85,9 @@ usage: asm [-o <output>] [-l <list>] <input>
      i8051 i8080 i8085 V30EMU Z80 Z180 Z280 Z380 Z8 Z86C Z88 TLCS90
      INS8060 INS8070 CDP1802 CDP1804 CDP1804A SCN2650 F3850 IM6100 HD6120
      TMS7000 TMS370 TMS32010 TMS32015 TMS32020 TMS320C25 TMS320C26 i8086
-     i80186 i80286 V30 i8096 MC68000 MC68010 MC68020 TMS9900 TMS9980
-     TMS9995 TMS99105 TMS99110 Z8001 Z8002 NS32032 MN1610 MN1613 MN1613A
-     J11 T11
+     i80186 i80286 V30 i8096 MC68000 MC68010 MC68020 MC68030 TMS9900
+     TMS9980 TMS9995 TMS99105 TMS99110 Z8001 Z8002 NS32032 MN1610 MN1613
+     MN1613A J11 T11
   -o <output>       : output file
   -l <list>         : list file
   -S[<bytes>]       : output Motorola S-Record format
@@ -128,9 +128,9 @@ usage: dis -C <CPU> [-o <output>] [-l <list>] <input>
      i8051 i8080 i8085 V30EMU Z80 Z180 Z280 Z380 Z8 Z86C Z88 TLCS90
      INS8060 INS8070 CDP1802 CDP1804 CDP1804A SCN2650 F3850 IM6100 HD6120
      TMS7000 TMS370 TMS32010 TMS32015 TMS32020 TMS320C25 TMS320C26 i8086
-     i80186 i80286 V30 i8096 MC68000 MC68010 MC68020 TMS9900 TMS9980
-     TMS9995 TMS99105 TMS99110 Z8001 Z8002 NS32032 MN1610 MN1613 MN1613A
-     J11 T11
+     i80186 i80286 V30 i8096 MC68000 MC68010 MC68020 MC68030 TMS9900
+     TMS9980 TMS9995 TMS99105 TMS99110 Z8001 Z8002 NS32032 MN1610 MN1613
+     MN1613A J11 T11
   -o <output>      : output file
   -l <list>        : list file
   <input>          : file can be Motorola S-Record or Intel HEX format
