[CLI] Support --name and --no-name for boolean option

--- a/README_.adoc
+++ b/README_.adoc
@@ -98,6 +98,8 @@ usage: asm [-o <output>] [-l <list>] <input>
   -n                : output line number to list file
   -v                : print progress verbosely
   --<name>=<vale>   : extra options (<type> [, <CPU>])
+  --<name>          : --<name>=true
+  --no-<name>       : --<name>=false
   --list-radix      : set listing radix (8, 16) (int)
   --smart-branch    : optimize branch instruction (bool)
   --extmode         : Extended mode (bool: Z380)
